Fix align-items: center

--- a/flex.class.css
+++ b/flex.class.css
@@ -130,7 +130,7 @@
 
 .flex.flex-align-center,
 .fc-middle {
-  align-items: flex-center
+  align-items: center
 }
 
 .flex.flex-align-baseline,
